added some forms for payment

--- a/src/components/PaymentMethod/PaymentMethod.scss
+++ b/src/components/PaymentMethod/PaymentMethod.scss
@@ -1,1 +1,11 @@
 /* todo: delete file if not needed */
+.payMethod {
+    margin-top: 10%;
+    margin-left: 3%;
+}
+.payMethod img {
+    height: 10%;
+    width: 10%;
+    border-radius: 8px;
+    margin-right: 2%;
+}
