--- a/src/components/AmountPage/AmountPage.scss
+++ b/src/components/AmountPage/AmountPage.scss
@@ -15,6 +15,7 @@
     color:rgb(124, 33, 124);;
     margin-top: 20%;
     font-size: 50px;
+    text-align: center;
 }
 .amount input {
     height: 50px;
