--- a/src/components/PaymentForms/PaymentForms.scss
+++ b/src/components/PaymentForms/PaymentForms.scss
@@ -3,8 +3,8 @@
     margin-top: 15%;
     margin-left: 15%;
 }
-.form {
-    display: inline;
+.wrapper {
+    display: flex;
 }
 .form input {
     height: 40px;
