--- a/src/components/PaymentForms/PaymentForms.scss
+++ b/src/components/PaymentForms/PaymentForms.scss
@@ -1,12 +1,15 @@
 /* todo: delete file if not needed */
 .methodForm {
-    margin-top: 7%;
+    margin-top: 3%;
     margin-left: 4%;
 }
 .wrapper {
     display: flex;
 }
 .wrapper h1 {
+    margin-top: 7%;
+}
+.details {
     margin-top: 7%;
 }
 .form input {
